ready for railway deplyment

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ HOST=0.0.0.0
 
 # CORS Settings
 # For production, set to your actual domain (e.g., https://yourdomain.com)
+# For Railway deployment, add your Railway app URL
 # For local development, use http://localhost:3000 or http://127.0.0.1:3000
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://your-app-name.railway.app
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_api_key_here
