--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,39 @@
-# Core Framework
+annotated-types==0.7.0
+anyio==3.7.1
+certifi==2025.8.3
+click==8.2.1
+deprecated==1.2.18
+distro==1.9.0
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
-# OpenAI Integration
-openai>=1.0.0
-
-# Web Framework Dependencies
-python-multipart==0.0.6
+gunicorn==21.2.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.25.2
+idna==3.10
+iniconfig==2.1.0
+jiter==0.10.0
+limits==5.5.0
+openai==1.99.9
+packaging==25.0
+pillow==11.3.0
+pluggy==1.6.0
 pydantic==2.5.0
-python-dotenv==1.0.0
-
-# Database
-# Using SQLite (built-in with Python)
-
-# Security & Rate Limiting
-slowapi==0.1.9
-
-# PDF Generation
-reportlab==4.0.7
-
-# Development & Testing
+pydantic-core==2.14.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
-
-# Optional: For production deployment
-gunicorn==21.2.0
+python-dotenv==1.0.0
+python-multipart==0.0.6
+pyyaml==6.0.2
+reportlab==4.0.7
+slowapi==0.1.9
+sniffio==1.3.1
+starlette==0.27.0
+tqdm==4.67.1
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+wrapt==1.17.3
