--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,12 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[variables]
+# These will be overridden by Railway environment variables
+OPENAI_API_KEY = ""
+LOG_LEVEL = "INFO"
+RATE_LIMIT_PER_MINUTE = "30"
