--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
-[build]
-builder = "nixpacks"
+
+start = 'npx serve -s docs'
 
 [deploy]
 startCommand = "python -m uvicorn main:app --host 0.0.0.0 --port $PORT"
