--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,8 @@
 
-start = 'npx serve -s docs'
 
-[deploy]
-startCommand = "python -m uvicorn main:app --host 0.0.0.0 --port $PORT"
+
+
+start = "python -m uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
